# customer_support_ticket_flow

./: .gitignore  README.md  pyproject.toml
src/customer_support_ticket_flow/: main.py
src/customer_support_ticket_flow/crews/: __init__.py
src/customer_support_ticket_flow/crews/text_to_sql_crew/: text_to_sql_crew.py
src/customer_support_ticket_flow/crews/text_to_sql_crew/config/: agents.yaml  tasks.yaml
src/customer_support_ticket_flow/crews/text_to_sql_crew/tools/: text_to_sql_tool.py
