[project]
name = "customer_support_ticket_flow"
version = "0.1.0"
description = "customer_support_ticket_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0",
    "pandas>=2.3.3",
]

[project.scripts]
kickoff = "customer_support_ticket_flow.main:kickoff"
run_crew = "customer_support_ticket_flow.main:kickoff"
plot = "customer_support_ticket_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
